# ChangeLog for sci-mathematics/geomview
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/geomview/ChangeLog,v 1.7 2007/07/09 01:33:37 nerdboy Exp $

  09 Jul 2007; Steve Arnold <nerdboy@gentoo.org> geomview-1.9.2.ebuild:
  removed extra postinst

  09 Jul 2007; Steve Arnold <nerdboy@gentoo.org> geomview-1.9.2.ebuild:
  updated desktop entry and added calls to desktop_database_update

*geomview-1.9.2 (06 Jul 2007)

  06 Jul 2007; Steve Arnold <nerdboy@gentoo.org> +files/geomview.png,
  +files/gvcl-mode.el, +geomview-1.9.2.ebuild:
  overdue version bump and feature additions (modified ebuild from user,
  but I admit to finding it on my hard drive and I have no idea where it
  originally came from)

*geomview-1.8.2_rc9 (04 Apr 2007)

  04 Apr 2007; Steve Arnold <nerdboy@gentoo.org> +geomview-1.8.2_rc9.ebuild:
  Added latest official release (closes bug #165003).  Tested and keyworded
  for ~amd64.  Based on ebuild by Marcus Bannerman <m.bannerman _at_ gmail.com>

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

*geomview-1.8.1-r3 (28 Dec 2004)

  28 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +files/geomview-1.8.1-configure.diff,
  +files/geomview-1.8.1-stdiostream.diff, +geomview-1.8.1-r3.ebuild:
  Moved from app-sci/geomview to sci-mathematics/geomview.

  25 Jun 2004; George Shapovalov <george@gentoo.org> geomview-1.8.1-r3.ebuild:
  removed RDEPEND=DEPEND line (deprecated for a while now)

  20 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> geomview-1.8.1-r3.ebuild:
  Some people seem to have problems with GL headers, adding -DGL_GLEXT_LEGACY to
  CFLAGS. See bug #44896.

  19 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> geomview-1.8.1-r3.ebuild:
  moved to epatch

  19 Apr 2004; Patrick Kursawe <phosphan@gentoo.org> geomview-1.8.1-r3.ebuild:
  Removed S, added IUSE

*geomview-1.8.1-r3 (04 Mar 2004)
