@@ -1,0 +1,3 @@
+MD5 4da5a241a068b362c819ecca419d1f3d geomview-1.9.4.tar.bz2 4037982
+RMD160 6d53d7e6bce17e3298dc6f55e1e1770918b868a5 geomview-1.9.4.tar.bz2 4037982
+SHA256 a384790429541b8c86c41c4b27d157d5a92ee7c46e6a78741e55d81bd9a46c5b geomview-1.9.4.tar.bz2 4037982
